# vm_x

./: .gitignore  settings.gradle
app/: .gitignore  build.gradle
app/keystore/: vm.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: rom.tar.xz
app/src/main/cpp/: CMakeLists.txt  bm_surface.cpp  file_utils.cpp  guard.h  log.h  vm.cpp
app/src/main/cpp/OpenglCodecCommon/: ChecksumCalculator.cpp  ChecksumCalculator.h  ChecksumCalculatorThreadInfo.cpp  ErrorLog.h  SocketStream.cpp  SocketStream.h  TcpStream.cpp  TcpStream.h  glUtils.cpp  glUtils.h  gl_base_types.h
app/src/main/cpp/android/base/: Debug.cpp  Optional.h
app/src/main/cpp/android/base/sockets/: SocketErrors.h
app/src/main/cpp/android/base/synchronization/: Lock.h
app/src/main/cpp/android/base/system/: System.cpp
app/src/main/cpp/android/base/threads/: ThreadStore.h
app/src/main/cpp/android/utils/: debug.h  file_io.cpp  looper.cpp  looper.h  path.cpp  path_system.cpp
app/src/main/cpp/camera/: bm_camera.cpp
app/src/main/cpp/emugl/common/: debug.h  dma_device.cpp  dma_device.h  feature_control.h  logging.h  misc.h  shared_library.h  sync_device.h
app/src/main/cpp/gps/: bm_gps.cpp  gps.c  gps.h
app/src/main/cpp/include/: Compiler.h  ConditionVariable.h  FeatureControl.h  IOStream.h  LazySnapshotObj.h  emugl_config.h  render_api_platform_types.h  render_api_types.h
app/src/main/cpp/include/OpenGLESDispatch/: EGLDispatch.cpp  GLESv1Dispatch.cpp  GLESv2Dispatch.cpp  OpenGLDispatchLoader.cpp  RenderEGL_extensions_functions.h  RenderEGL_functions.h  gles31_only_functions.h  gles3_only_functions.h  gles_common_functions.h  render_api.h  render_api_functions.h
app/src/main/cpp/input/: InputCode.h  bm_input.cpp
app/src/main/cpp/libGLSnapshot/: GLSnapshot.cpp  GLSnapshot.h
app/src/main/cpp/libs/GLESv1_dec/: GLESv1Decoder.cpp  GLESv1Decoder.h  gles1_dec.cpp  gles1_dec.h  gles1_opcodes.h  gles1_server_context.cpp  gles1_server_context.h
app/src/main/cpp/libs/GLESv2_dec/: GLESv2Decoder.cpp  GLESv2Decoder.h  gles2_dec.cpp  gles2_dec.h  gles2_server_context.cpp
app/src/main/cpp/libs/libOpenglRender/: ColorBuffer.cpp  ColorBuffer.h  FbConfig.cpp  FbConfig.h  FenceSync.cpp  FenceSync.h  FrameBuffer.cpp  FrameBuffer.h  GLESVersionDetector.cpp  GLESVersionDetector.h  PostWorker.cpp  PostWorker.h  ReadBuffer.cpp  ReadBuffer.h  ReadbackWorker.cpp  ReadbackWorker.h  RenderChannel.h  RenderChannelImpl.cpp  RenderChannelImpl.h  RenderContext.cpp  RenderContext.h  RenderControl.cpp  RenderControl.h  RenderLib.h  RenderLibImpl.cpp  RenderLibImpl.h  RenderThread.cpp  RenderThread.h  RenderThreadInfo.cpp  RenderThreadInfo.h  RenderWindow.cpp  RenderWindow.h  Renderer.h  RendererImpl.cpp  RendererImpl.h  StalePtrRegistry.h  SyncThread.cpp  SyncThread.h  TextureDraw.cpp  TextureDraw.h  (+7 more)
app/src/main/cpp/libs/renderControl_dec/: renderControl_dec.cpp  renderControl_dec.h  renderControl_server_context.cpp  renderControl_server_context.h  renderControl_server_proc.h  renderControl_types.h
app/src/main/res/drawable/: bg_doubleopen_tag.xml  bg_doubleopen_text.xml  bg_home_left.xml  bg_premium_list.xml  bg_white_bottom.xml  shape_corner_05_000.xml  (+8 more)
gradle/wrapper/: gradle-wrapper.properties
(+72 files in other folders)
